Fix for captcha covering the file field when Google uses the copy/paste type.

--- a/src/General/css/style.css
+++ b/src/General/css/style.css
@@ -105,6 +105,10 @@ hr + div.center:not(.ad-cnt):not(.topad):not(.middlead):not(.bottomad) {
   /* party hats */
   pointer-events: none;
 }
+#g-recaptcha {
+  min-height: 78px;
+  height: auto;
+}
 :root:not(.js-enabled) #postForm {
   display: table;
 }
